# OpenGL_x

./: CMakeLists.txt  main.cpp
src/: GLTriangle.cpp  GLTriangle.h  MyOpenGL.cpp  MyOpenGL.h  MyOpenGL.ui
